crates/test-files/fixtures/compile_errors/invalid_impl_location.fe
use std::traits::Dummy

impl Dummy for Context {}
